# coraline

./: .gitignore  .markdownlint.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  SECURITY.md  deny.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: auto-tag.yml  ci.yml  codeql.yml  dependabot-automerge.yml  docs-pages.yml  release.yml  scorecard.yml  security.yml
crates/coraline/: Cargo.toml
crates/coraline/benches/: indexing.rs
crates/coraline/proptest-regressions/: vectors.txt
crates/coraline/src/: audit.rs  config.rs  context.rs  db.rs  extraction.rs  graph.rs  lib.md  lib.rs  logging.rs  mcp.rs  mcp.rs.backup  mcp_clean.rs  memory.rs  resolution.rs  security.rs  sync.rs  types.rs  update.rs  utils.rs  vectors.rs
crates/coraline/src/db/: schema.sql
crates/coraline/src/resolution/: mod.rs
crates/coraline/src/resolution/frameworks/: blazor.rs  laravel.rs  mod.rs  react.rs  rust.rs
crates/coraline/src/tools/: audit_tools.rs  context_tools.rs  file_tools.rs  graph_tools.rs  memory_tools.rs  mod.rs
crates/coraline/tests/: context_test.rs  extraction_test.rs  graph_precision_test.rs  graph_test.rs
crates/coraline/tests/fixtures/blazor-app/: Counter.razor  UserList.razor  UserService.cs  _Imports.razor
crates/coraline/tests/fixtures/graph_precision/active_legacy/legacy/: api.rs
crates/coraline/tests/fixtures/graph_precision/active_legacy/src/: api.rs  runtime.rs
crates/coraline/tests/fixtures/mixed-language/: api.rs  client.ts  config.toml
crates/coraline/tests/fixtures/rust-crate/src/: lib.rs  math.rs  user.rs
crates/coraline/tests/fixtures/typescript-simple/: index.ts  math.ts  user.ts
crates/tree-sitter-blazor/: Cargo.toml  README.md  build.rs  grammar.js  package.json  tree-sitter.json
crates/tree-sitter-blazor/bindings/rust/: lib.rs
crates/tree-sitter-blazor/src/: grammar.json  node-types.json  parser.c
docs/: ARCHITECTURE.md  CLI_REFERENCE.md  CONFIGURATION.md  DEVELOPMENT.md  IMPROVEMENT_PLAN.md  MCP_PRODUCTION_SECURITY_PLAN.md  MCP_TOOLS.md
docs/book/: book.toml
docs/book/book/: 404.html  architecture.html  changelog.html  cli-reference.html  configuration.html  development.html  getting-started.html  index.html  mcp-tools.html  print.html  searcher-c2a407aa.js  searchindex-33576e81.js  toc-4db0d6db.js  toc.html
docs/book/src/: SUMMARY.md  architecture.md  cli-reference.md  configuration.md  development.md  getting-started.md  index.md  mcp-tools.md
docs/diagrams/: high-level-overview.mmd  readme-architecture-overview.mmd
