[package]
name = "coraline"
version = "0.6.0"
edition = "2024"
license = "MIT"
description = "Coraline: semantic code knowledge graph for faster AI-assisted development."
repository = "https://github.com/greysquirr3l/coraline"
readme = "../../README.md"
keywords = ["codegraph", "analysis", "indexing", "mcp"]
categories = ["development-tools"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "coraline"
path = "src/bin/coraline.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
rusqlite = { version = "0.39", features = ["bundled"] }
sha2 = "0.11"
hex = "0.4"
regex = "1"
globset = "0.4.18"
rayon = "1"
ndarray = { version = "0.17", optional = true }
ort = { version = "=2.0.0-rc.11", default-features = false, features = ["ndarray", "std"], optional = true }
tokenizers = { version = "0.22", default-features = false, features = ["onig"], optional = true }

# Always available for update checking
ureq = { version = "3", default-features = false, features = ["rustls", "json"] }

# Tree-sitter core and parsers
tree-sitter = "0.26.8"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-rust = "0.24.2"
tree-sitter-python = "0.25"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-blazor = { version = "0.1.2", path = "../tree-sitter-blazor" }

# Additional language parsers
tree-sitter-bash = "0.25.1"
tree-sitter-dart = "0.0.4"
tree-sitter-elixir = "0.3.5"
tree-sitter-elm = "5.9.0"
tree-sitter-erlang = "0.15.0"
tree-sitter-fortran = "0.5.1"
tree-sitter-groovy = "0.1.2"
tree-sitter-haskell = "0.23.1"
tree-sitter-julia = "0.23.1"
tree-sitter-lua = "0.5.0"
tree-sitter-markdown-fork = "0.7.3"  # Fork compatible with tree-sitter 0.26
tree-sitter-matlab = "1.3.0"
tree-sitter-nix = "0.3.0"
tree-sitter-perl = "1.1.2"
tree-sitter-powershell = "0.26.3"
tree-sitter-r = "1.2.0"
tree-sitter-scala = "0.25.0"
tree-sitter-toml-ng = "0.7.0"  # -ng version compatible with tree-sitter 0.26
tree-sitter-yaml = "0.7.2"
tree-sitter-zig = "1.1.2"

# Additional recently compatible parsers
tree-sitter-php = "0.24.2"
tree-sitter-swift = "0.7.1"
tree-sitter-kotlin-ng = "1.1.0"  # Using -ng fork which is compatible with tree-sitter 0.26

[features]
default = ["embeddings"]
embeddings = ["dep:ort", "dep:tokenizers", "dep:ndarray", "ort/download-binaries", "ort/tls-rustls"]
embeddings-dynamic = ["dep:ort", "dep:tokenizers", "dep:ndarray", "ort/load-dynamic"]

[dev-dependencies]
tempfile = "3"
insta = "1.47"
regex = "1"
proptest = "1"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "indexing"
harness = false

